--- a/_js.html.erb
+++ b/_js.html.erb
@@ -6,6 +6,7 @@
 <![endif]-->
 <script src="js/main.js"></script>
 <script src="js/idangerous.swiper.min.js"></script>
+<script src="js/jquery.touchSwipe.js"></script>
 <script src="js/handsome.min.js"></script>
 <script src="js/glDatePicker.min.js"></script>
 
